# pyOSut

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pull_request.yml
src/osut/: __init__.py  osut.py
src/osut/oslg/: oslg.py
tests/: test_osut.py
tests/files/osms/in/: seb.osm
