[project]
name = "osut"
version = "0.6.0"
description = "OpenStudio SDK utilities for Python"
readme = "README.md"
requires-python = ">=3.2"
authors = [ {name = "Denis Bourgeois", email = "denis@rd2.ca"} ]
maintainers = [ {name = "Denis Bourgeois", email = "denis@rd2.ca"} ]
dependencies = ["oslg","openstudio>=3.6.1"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.2",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = ["openstudio", "utilities"]

[project.urls]
"Homepage" = "https://github.com/rd2/pyOSut"
"Bug Tracker" = "https://github.com/rd2/pyOSut/issues"

[tool.uv]
package = true
